Revert "fix(tooltip): add overflow-wrap: break-word on the tooltip"
This reverts commit 92bdad42162004a0ef5873faa2c9af95e081bdd1

--- a/src/style/tooltip.scss
+++ b/src/style/tooltip.scss
@@ -15,7 +15,3 @@
 .tippy-box[data-theme~='wcs'][data-placement^='right'] > .tippy-arrow::before {
     border-right-color: var(--wcs-black);
 }
-
-.tippy-content {
-    overflow-wrap: break-word;
-}
